<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/background_light"
  tools:context="com.dryoxapps.fortnite_rank.controller.PlayerHomeActivity">

  <co.ceryle.segmentedbutton.SegmentedButtonGroup
    android:id="@+id/segmentedButtonGroup"
    android:layout_width="match_parent"
    android:layout_height="47dp"
    android:layout_margin="10dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintBottom_toTopOf="@+id/profileRank"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:sbg_animateSelector="bounce"
    app:sbg_animateSelectorDuration="500"
    app:sbg_backgroundColor="#bf9ed4"
    app:sbg_dividerColor="#ad7fc6"
    app:sbg_dividerPadding="10dp"
    app:sbg_dividerSize="1dp"
    app:sbg_position="0"
    app:sbg_radius="2dp"
    app:sbg_ripple="true"
    app:sbg_rippleColor="#ad7fc6"
    app:sbg_selectorColor="#ad7fc6"
    app:sbg_selectorTextColor="@android:color/white"
    app:sbg_shadow="true"
    app:sbg_shadowElevation="3dp"
    app:sbg_shadowMargin="4dp">

    <Button
      android:id="@+id/txtOverall"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minHeight="10dp"
      android:text="@string/Average"
      android:textAllCaps="true"/>

    <Button
      android:id="@+id/txtSOLO"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minHeight="10dp"
      android:text="@string/solo"
      android:textAllCaps="true"/>

    <Button
      android:id="@+id/txtDUO"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minHeight="10dp"
      android:text="@string/duo"
      android:textAllCaps="true"/>

    <Button
      android:id="@+id/txtSQUAD"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minHeight="10dp"
      android:text="@string/squad"
      android:textAllCaps="true"/>
  </co.ceryle.segmentedbutton.SegmentedButtonGroup>

  <TextView
    android:id="@+id/playerName"
    android:layout_width="207dp"
    android:layout_height="79dp"
    android:gravity="center_vertical"
    android:text="@string/textview"
    android:textColor="@color/Logo_Color"
    android:textSize="30sp"
    app:layout_constraintBottom_toBottomOf="@+id/profileRank"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/profileRank"
    app:layout_constraintTop_toTopOf="@+id/profileRank"/>
  <TextView
    android:id="@+id/profileRankName"
    android:layout_width="105dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:gravity="left"
    android:text="@string/textview"
    android:textColor="@android:color/black"
    app:layout_constraintBottom_toTopOf="@+id/scrollView2"
    app:layout_constraintEnd_toStartOf="@+id/numberSign"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/profileRank"
    app:layout_constraintVertical_bias="0.333"/>
  <TextView
    android:id="@+id/profileRankNumber"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="75dp"
    android:layout_marginLeft="0dp"
    android:gravity="left"
    android:text="TextView"
    android:textColor="@android:color/black"
    app:layout_constraintBottom_toTopOf="@+id/scrollView2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/numberSign"
    app:layout_constraintTop_toBottomOf="@+id/profileRank"
    app:layout_constraintVertical_bias="0.673"/>
  <TextView
    android:id="@+id/numberSign"
    android:layout_width="9dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:layout_marginRight="0dp"
    android:text="#"
    android:textColor="@android:color/black"
    app:layout_constraintBottom_toTopOf="@+id/scrollView2"
    app:layout_constraintEnd_toStartOf="@+id/profileRankNumber"

    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/profileRankName"
    app:layout_constraintTop_toBottomOf="@+id/profileRank"
    app:layout_constraintVertical_bias="0.058"/>
  <ImageView
    android:id="@+id/profileRank"
    android:layout_width="73dp"
    android:layout_height="68dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:contentDescription="@string/todo"
    app:layout_constraintBottom_toTopOf="@+id/profileRankName"
    app:layout_constraintEnd_toStartOf="@+id/playerName"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/segmentedButtonGroup"
    app:srcCompat="@android:color/transparent"/>


  <ScrollView
    android:id="@+id/scrollView2"
    android:layout_width="0dp"
    android:layout_height="236dp"
    android:layout_weight="1"
    app:layout_constraintBottom_toTopOf="@+id/recentMatchesTable"
    app:layout_constraintEnd_toEndOf="@+id/recentMatchesTable"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/recentMatchesTable"
    app:layout_constraintTop_toBottomOf="@+id/profileRankName">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <TableLayout
        android:id="@+id/statsTable"
        android:layout_width="match_parent"
        android:layout_height="455dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerName">

        <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="#bf9ed4"
          android:minHeight="50dp">
          <ImageView
            android:id="@+id/statRatingImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@android:color/transparent"/>
          <TextView
            android:id="@+id/statRatingName"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="Rating"/>
          <TextView
            android:id="@+id/statRatingVal"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/textview"/>
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:background="#dccae8"
          android:minHeight="50dp">
          <ImageView
            android:id="@+id/statWinsImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            app:srcCompat="@android:color/transparent"/>
          <TextView
            android:id="@+id/statWinsName"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/wins"/>
          <TextView
            android:id="@+id/statWinsVal"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/textview"/>
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:background="#bf9ed4"
          android:minHeight="50dp">
          <ImageView
            android:id="@+id/statKillsImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@android:color/transparent"/>
          <TextView
            android:id="@+id/statKillsName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/kills"/>
          <TextView
            android:id="@+id/statKillsVal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/textview"/>
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:background="#dccae8"
          android:minHeight="50dp">
          <ImageView
            android:id="@+id/statKdImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@android:color/transparent"/>
          <TextView
            android:id="@+id/statKdName"
            android:layout_width="84dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/kd"/>
          <TextView
            android:id="@+id/statKdVal"
            android:layout_width="42dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/textview"/>
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:background="#bf9ed4"
          android:minHeight="50dp">
          <ImageView
            android:id="@+id/statKpgImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@android:color/transparent"/>
          <TextView
            android:id="@+id/statKpgName"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/kpg"/>
          <TextView
            android:id="@+id/statKpgVal"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/textview"/>
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:background="#dccae8"
          android:minHeight="50dp">
          <ImageView
            android:id="@+id/statScoreImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@android:color/transparent"/>
          <TextView
            android:id="@+id/statScoreName"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="Score"/>
          <TextView
            android:id="@+id/statScoreVal"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/textview"/>
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:background="#bf9ed4"
          android:minHeight="50dp">
          <ImageView
            android:id="@+id/statScorePerMatchImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@android:color/transparent"/>
          <TextView
            android:id="@+id/statScorePerMatchName"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="Score / Game"/>
          <TextView
            android:id="@+id/statScorePerMatchVal"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/textview"/>
        </TableRow>
      </TableLayout>
    </LinearLayout>
  </ScrollView>
  <TableLayout
    android:id="@+id/recentMatchesTable"
    android:layout_width="312dp"
    android:layout_height="50dp"
    android:layout_marginBottom="4dp"
    android:background="#bf9ed4"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/scrollView2"
    >


    <TableRow
      android:layout_width="match_parent"
      android:minHeight="50dp">
      <ImageView
        android:id="@+id/matchHistoryImage"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        app:srcCompat="@android:color/transparent"/>
      <TextView
        android:id="@+id/matchHistoryVal"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:minWidth="50dp"
        android:text="TextView"/>
    </TableRow>
  </TableLayout>
</android.support.constraint.ConstraintLayout>
